--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            padding: 0 20px;
+            box-sizing: border-box;
         }
 
         header {
@@ -36,8 +38,11 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: calc(100vh - 100px);
+            flex: 1;
             width: 100%;
+            max-width: 1000px;
+            margin: 0 auto;
+            text-align: center;
         }
 
         .typewriter, .subheading {
@@ -55,7 +60,6 @@
         .subheading {
             font-size: 1em;
             margin-top: 10px;
-            text-align: center;
             text-decoration: underline;
             animation: typing-subheading 3s steps(100, end) 1s forwards, blink-caret-subheading .75s step-end infinite 4s;
             /* 3s typing duration + 1s delay = 4s total */
@@ -83,10 +87,25 @@
         }
 
         widgetbot {
-            width: 800px;
+            width: 100%;
+            max-width: 800px;
             height: 600px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             margin-top: 20px;
+        }
+
+        @media (max-width: 600px) {
+            .typewriter {
+                font-size: 1.5em;
+            }
+
+            .subheading {
+                font-size: 0.875em;
+            }
+
+            widgetbot {
+                height: 400px;
+            }
         }
     </style>
 </head>
@@ -100,7 +119,7 @@
         <widgetbot
             server="1241753993072607262"
             channel="1241754606619332648"
-            width="800"
+            width="100%"
             height="600"
         ></widgetbot>
     </div>
